--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fx/laravel-slug": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/nova": "*",
+        "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1"
     },
