php 解析 markdown 文本

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "fx/laravel-slug": "^1.0",
+        "graham-campbell/markdown": "^11.0",
         "laravel/framework": "5.8.*",
         "laravel/nova": "*",
         "laravel/telescope": "^2.0",
