--- a/composer.json
+++ b/composer.json
@@ -64,10 +64,14 @@
             "@php artisan key:generate --ansi"
         ]
     },
-    "repositories": [
-        {
-            "type":"path",
+    "repositories": {
+        "0": {
+            "type": "path",
             "url": "./packages/laravel-nova"
+        },
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
         }
-    ]
+    }
 }
