--- a/.drone.yml
+++ b/.drone.yml
@@ -31,4 +31,4 @@ steps:
   commands:
   - sed -i -e 's/__TAG__/auto-${DRONE_BUILD_NUMBER}/g' deploy.yml || true
   - sed -i -e 's/__NAME__/blog/g' deploy.yml || true
-  - kubectl rolling-update deploy blog-deployment --image=registry-vpc.cn-beijing.aliyuncs.com/nfangxu/blog:auto-${DRONE_BUILD_NUMBER} || kubectl apply -f deploy.yml
+  - kubectl apply -f deploy.yml
